k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lighthouse-postgresql
  labels:
    name: lighthouse-postgresql
    app: lighthouse-audit 
  namespace: dx-poc
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres-pod
      app: lighthouse-audit
  template:
    metadata:
      name: postgres-app-pod
      labels:
        name: postgres-pod
        app: lighthouse-audit
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
