k8s/lighthouse_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    backstage.io/kubernetes-id: lighthouse-audit
  name: lighthouse-audit
  namespace: dx-poc
spec:
  type: NodePort
  ports:
  - name: http-8080
    port: 8080
    protocol: TCP
    targetPort: 3003
  selector:
    app: lighthouse-audit
    backstage.io/kubernetes-id: lighthouse-audit  
  sessionAffinity: None
