k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lighthouse-pgdb-svc
  namespace: dx-poc
  labels:
    name: postgres-service
    app: lighthouse-audit
spec:
  selector:
    name: postgres-pod
    app: lighthouse-audit
  type: NodePort 
  ports:
    - port: 5432
      targetPort: 5432
